manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: http
      protocol: TCP
      port: 15672  # Changed from 15672 to match StatefulSet
      targetPort: 15672
    - name: amqp
      protocol: TCP
      port: 5672  # Changed from 5672 to match StatefulSet
      targetPort: 5672
